--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^8.5.5",
+    "form-data": "^4.0.0",
+    "node-fetch": "v2",
     "sharp": "^0.32.1",
     "ws": "^8.13.0"
   },
