--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "voicemod",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "I am working on changing how the api interface works.",
   "main": "./src/main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "tsc && node ."
+    "start": "node ."
   },
   "keywords": [],
   "author": "_phaz",
   "license": "ISC",
   "dependencies": {
-    "@types/ws": "^8.5.5",
     "form-data": "^4.0.0",
     "node-fetch": "v2",
     "sharp": "^0.32.1",
@@ -24,8 +22,5 @@
   "bugs": {
     "url": "https://github.com/phaze-the-dumb/voicemod-api/issues"
   },
-  "homepage": "https://github.com/phaze-the-dumb/voicemod-api#readme",
-  "devDependencies": {
-    "typescript": "^5.1.6"
-  }
+  "homepage": "https://github.com/phaze-the-dumb/voicemod-api#readme"
 }
